--- a/ception/templates/base.html
+++ b/ception/templates/base.html
@@ -12,7 +12,7 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="{% static 'js/jquery.min.js' %}"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <script src="{% static 'js/bootcamp.js' %}"></script>
     <script src="{% static 'js/ckeditor/ckeditor.js' %}"></script>
@@ -81,6 +81,6 @@
       <script src="{% static 'js/notifications.js' %}"></script>
       <script src="{% static 'js/check_messages.js' %}"></script>
     {% endblock body %}
-    <script src="{% static 'js/ga.js' %}"></script>
+    {#    <script src="{% static 'js/ga.js' %}"></script>#}
   </body>
 </html>
