--- a/staticfiles/css/bootcamp.css
+++ b/staticfiles/css/bootcamp.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Audiowide);
+@import url(http://fonts.lug.ustc.edu.cn/css?family=Audiowide);
 
 body {
   padding-top: 70px;
