--- a/ception/static/js/ckeditor/plugins/lite/css/lite.css
+++ b/ception/static/js/ckeditor/plugins/lite/css/lite.css
@@ -24,44 +24,44 @@ ins.ice-no-decoration, del.ice-no-decoration {
 	text-decoration: none !important;
 }
 
-.ICE-Tracking span.ice-ins, .ICE-Tracking ins.ice-ins,
-.ICE-Tracking span.ice-del, .ICE-Tracking del.ice-del {
-	color: #000;
+.ICE-Tracking span.ice-ins, .ICE-Tracking ins.ice-ins {
+	color: #ff3366;
 /*	padding: 1px 0 2px; */
 }
 
 .ICE-Tracking span.ice-del, .ICE-Tracking del.ice-del {
 	display: inline;
 	text-decoration: line-through !important;
-	color: #555;
-	background-color: #e5ffcd !important;
+	color: #3366ff;
+	/*background-color: #e5ffcd !important;*/
 }
 
 .ICE-Tracking .ice-ins, .ICE-Tracking .ice-ins>*  {
-	background-color: #e5ffcd !important;
+	/*color: #ff3366;*/
+	/*background-color: #e5ffcd !important;*/
 }
 
 .ICE-Tracking .ice-ins.ice-cts-1, .ICE-Tracking .ice-ins.ice-cts-1>*  {
-	background-color: #e5ffcd !important;
+	/*background-color: #e5ffcd !important;*/
 }
 
 .ICE-Tracking .ice-ins.ice-cts-2, .ICE-Tracking .ice-ins.ice-cts-2>*  {
-	background-color: #e3ffff !important;
+	/*background-color: #e3ffff !important;*/
 }
 
 .ICE-Tracking .ice-ins.ice-cts-3, .ICE-Tracking .ice-ins.ice-cts-3>*  {
-	background-color: #ffdddd !important;
+	/*background-color: #ffdddd !important;*/
 }
 
 .ICE-Tracking .ice-del.ice-cts-1 {
-	background-color: #e5ffcd !important;
+	/*background-color: #e5ffcd !important;*/
 }
 
 .ICE-Tracking .ice-del.ice-cts-2 {
-	background-color: #e3ffff !important;
+	/*background-color: #e3ffff !important;*/
 }
 
 .ICE-Tracking .ice-del.ice-cts-3 {
-	background-color: #ffdddd !important;
+	/*background-color: #ffdddd !important;*/
 }
 
