Add authors: scyue, ZYShin, shawn

--- a/ception/articles/templates/articles/partial_sentence.html
+++ b/ception/articles/templates/articles/partial_sentence.html
@@ -30,7 +30,7 @@
       <input type="hidden" name="version_id" value="0">
       <input type="hidden" name="sentence_id" value="0">
       <textarea class="form-control sentence-comment-content" rows="1"
-                placeholder="Write a comment..."
+                placeholder="Write a comment... (Press Ctrl + Enter to post)"
                 name="sentence-comment">
       </textarea>
     </form>
