--- a/ception/templates/base.html
+++ b/ception/templates/base.html
@@ -17,6 +17,7 @@
     <script src="{% static 'js/bootcamp.js' %}"></script>
     <script src="{% static 'js/ckeditor/ckeditor.js' %}"></script>
     <script src="{% static 'js/ckeditor/useful.js' %}"></script>
+    <script src="{% static 'js/ckeditor/dom-functions.js' %}"></script>
     <script src="{% static 'js/ckeditor/plugins/lite/lite-interface.js' %}"></script>
     {% block head %}{% endblock %}
   </head>
