--- a/ception/templates/base.html
+++ b/ception/templates/base.html
@@ -7,6 +7,7 @@
     <title>{% block title %}CEPT{% endblock %}</title>
     <link rel="icon" type="image/png" href="{% static 'img/favicon.png' %}">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
+    {#    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">#}
     <link href="{% static 'css/bootcamp.css' %}?v=1" rel="stylesheet">
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -14,6 +15,7 @@
     <![endif]-->
     <script src="{% static 'js/jquery.min.js' %}"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    {#    <script src="{% static 'js/bootstrap.min.js' %}"></script>#}
     <script src="{% static 'js/bootcamp.js' %}"></script>
     <script src="{% static 'ckeditor/ckeditor.js' %}"></script>
     <script src="{% static 'ckeditor/useful.js' %}"></script>
