Sentence Merge Presentation Improved

--- a/ception/articles/static/css/edit.css
+++ b/ception/articles/static/css/edit.css
@@ -140,3 +140,12 @@
     color: #333;
 }
 
+highlight {
+    background-color: #FFFF88;
+    font-weight: bold
+}
+
+.highlight {
+    background-color: #FFFF88;
+    font-weight: bold
+}
