--- a/staticfiles/css/edit.css
+++ b/staticfiles/css/edit.css
@@ -101,13 +101,12 @@
 }
 
 .vote-div {
-    width: 70%;
-    float: right;
+    /*float: right;*/
     padding-top: 10px;
     text-align: center;
     padding-left: 0;
     padding-right: 0;
-    margin-left: -20px;
+    /*margin-left: -20px;*/
 }
 
 .sentence-comment-button {
