--- a/ception/articles/static/css/edit.css
+++ b/ception/articles/static/css/edit.css
@@ -4,6 +4,7 @@
 }
 
 #sentence-list {
+    margin-top: 35px;
     border: 2px solid #e3e3e3;
     border-radius: 5px;
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
@@ -101,33 +102,27 @@
 }
 
 .vote-div {
-    width: 70%;
-    float: right;
-    padding-top: 10px;
+    /*width: 70%;*/
+    /*float: right;*/
+    /*padding-top: 10px;*/
     text-align: center;
     padding-left: 0;
     padding-right: 0;
-    margin-left: -20px;
+    /*margin-left: -20px;*/
 }
 
 .sentence-comment-button {
     text-align: center;
-    /*width: 30%;*/
-    /*float: left;*/
-    min-width: 50px;
+    padding-right: 5px;
 }
 
 .sentence-comment-vote-number {
-    display: inline;
-    font-size: 1.2em;
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    line-height: 25px;
     padding: 5px;
 }
 
 .sentence-vote {
     display: inline;
-    font-size: 16px;
+    /*font-size: 16px;*/
     color: #bbb;
 }
 
