--- a/staticfiles/ckeditor/skins/office2013/editor.css
+++ b/staticfiles/ckeditor/skins/office2013/editor.css
@@ -118,8 +118,8 @@ For licensing, see LICENSE.md or http://ckeditor.com/license
 }
 
 .cke_bottom {
-    padding: 6px 8px 2px;
-    position: relative;
+    /*padding: 6px 8px 2px;*/
+    /*position: relative;*/
     background: #2b579a
 }
 
@@ -129,7 +129,7 @@ For licensing, see LICENSE.md or http://ckeditor.com/license
 }
 
 .cke_resizer {
-    width: 0;
+    width: 100%;
     height: 0;
     overflow: hidden;
     border-width: 10px 10px 0 0;
@@ -137,8 +137,8 @@ For licensing, see LICENSE.md or http://ckeditor.com/license
     border-style: dashed solid dashed dashed;
     font-size: 0;
     vertical-align: bottom;
-    margin-top: 6px;
-    margin-bottom: 2px
+    /*margin-top: 6px;*/
+    /*margin-bottom: 2px*/
 }
 
 .cke_hc .cke_resizer {
@@ -149,7 +149,7 @@ For licensing, see LICENSE.md or http://ckeditor.com/license
 }
 
 .cke_resizer_ltr {
-    cursor: se-resize;
+    cursor: ns-resize;
     float: right;
     margin-right: -4px
 }
