--- a/staticfiles/ckeditor/contents.css
+++ b/staticfiles/ckeditor/contents.css
@@ -6,8 +6,9 @@ For licensing, see LICENSE.md or http://ckeditor.com/license
 body
 {
 	/* Font */
-	font-family: sans-serif, Arial, Verdana, "Trebuchet MS";
-	font-size: 15px;
+	/*font-family: sans-serif, Arial, Verdana, "Trebuchet MS";*/
+	font-family: "Georgia", Times, serif;
+	font-size: 14px;
 
 	/* Text color */
 	color: #333;
@@ -20,8 +21,8 @@ body
 
 .cke_editable
 {
-	font-size: 15px;
-	line-height: 1.6;
+	font-size: 14px;
+	line-height: 1.3;
 }
 
 blockquote
@@ -129,4 +130,39 @@ a > img {
 	margin: 1px;
 	border: none;
 	outline: 1px solid #0782C1;
+}
+
+.cke_concise_body {
+	margin: 0 10px 0 0;
+}
+
+.cke_concise_body p {
+	margin-top: 5px;
+	margin-bottom: 10px;
+	font-size: 14px;
+	line-height: 1.3;
+}
+
+.cke_concise_body .cke_editable {
+	font-size: 14px;
+	line-height: 1.3;
+}
+
+.highlight {
+	background-color: #FFFF88;
+	/*font-weight: bold*/
+}
+
+del {
+	color: #3399ff;
+	text-line-through-color: #6699ff;
+}
+
+ins {
+	color: #ff3366;
+	text-decoration: none;
+}
+
+.context {
+	opacity: 0.5;
 }
