--- a/ception/articles/templates/articles/partial_sentence.html
+++ b/ception/articles/templates/articles/partial_sentence.html
@@ -15,6 +15,9 @@
           <span class="sentence-comment-vote-number">-</span>
           <span class="glyphicon glyphicon-thumbs-down sentence-vote down-vote"></span>
         </div>
+        <div style="display: inline-block">
+          <span class="glyphicon glyphicon-ok"> </span>
+        </div>
       </h5>
       {% ifnotequal author user %}
         <div class="sentence-content" style="display: none"></div>
