--- a/ception/articles/static/css/edit.css
+++ b/ception/articles/static/css/edit.css
@@ -136,12 +136,11 @@
     color: #333;
 }
 
-highlight {
-    background-color: #FFFF88;
-    font-weight: bold
-}
 
 .highlight {
     background-color: #FFFF88;
-    font-weight: bold
+}
+
+.context {
+    opacity: 0.2;
 }
