--- a/ception/articles/templates/articles/edit.html
+++ b/ception/articles/templates/articles/edit.html
@@ -6,8 +6,11 @@
   <link href="{% static 'css/articles.css' %}" rel="stylesheet">
   <link href="{% static 'css/edit.css' %}" rel="stylesheet">
   <link href="{% static 'css/callout.css' %}" rel="stylesheet">
+  <link href="{% static 'css/bootstrap-toggle.min.css' %}" rel="stylesheet">
   <script src="{% static 'js/articles.js' %}"></script>
   <script src="{% static 'js/edit.js' %}"></script>
+  <script src="{% static 'js/bootstrap-toggle.min.js' %}"></script>
+
 {% endblock head %}
 
 {% block main %}
@@ -73,16 +76,17 @@
     </div>
 
     <div class="col-md-6" id="sidebar">
-      <div class="row">
-        <div class="col-md-6">
-          <a class="btn btn-default btn-block" id="cancel-button" style="margin-top: 10px;"
-             href="{% url 'articles' %}">{% trans 'Cancel' %}</a>
+      <div class="row" style="margin-top: 10px;">
+        <div class="col-md-4">
+          <a class="btn btn-default btn-block" id="cancel-button" href="{% url 'articles' %}">{% trans 'Cancel' %}</a>
         </div>
-        <div class="col-md-6">
-          <button class="btn btn-primary btn-block" id="commit-button"
-                  style="margin-top: 10px;">{% trans 'Commit' %}</button>
+        <div class="col-md-4">
+          <button class="btn btn-primary btn-block" id="commit-button">{% trans 'Commit' %}</button>
         </div>
+        <div class="col-md-4">
+          <input id="toggle-sentence-view" type="checkbox" data-toggle="toggle" data-on="Show" data-off="Hide">
         </div>
+      </div>
       <div id="sentence-list" hidden="hidden">
         {% include 'articles/partial_sentence.html' with author=user %}
         {% for author in data.authors %}
