--- a/ception/articles/templates/articles/edit.html
+++ b/ception/articles/templates/articles/edit.html
@@ -77,14 +77,18 @@
 
     <div class="col-md-6" id="sidebar">
       <div class="row" style="margin-top: 10px;">
-        <div class="col-md-4">
-          <a class="btn btn-default btn-block" id="cancel-button" href="{% url 'articles' %}">{% trans 'Cancel' %}</a>
+        <div class="col-md-3">
+          <button class="btn btn-default btn-block" id="cancel-button"
+                  href="{% url 'articles' %}">{% trans 'Cancel' %}</button>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-3">
           <button class="btn btn-primary btn-block" id="commit-button">{% trans 'Commit' %}</button>
         </div>
-        <div class="col-md-4">
-          <input id="toggle-sentence-view" type="checkbox" data-toggle="toggle" data-on="Show" data-off="Hide">
+        <div class="col-md-3">
+          <input id="toggle-sentence-view" type="checkbox" data-toggle="toggle" data-on="Context" data-off="Context">
+        </div>
+        <div class="col-md-3">
+          <input id="hide-del-toggle" type="checkbox" data-toggle="toggle" data-on="Delete " data-off="Delete ">
         </div>
       </div>
       <div id="sentence-list" hidden="hidden">
