--- a/ception/articles/templates/articles/partial_sentence.html
+++ b/ception/articles/templates/articles/partial_sentence.html
@@ -22,7 +22,7 @@
         {% endifnotequal %}
       </h5>
       {% ifnotequal author user %}
-        <div class="sentence-content sentence-content-others"></div>
+        <div class="sentence-content sentence-content-others hide-del-class"></div>
         <textarea id="editor-{{ author }}" disabled></textarea>
         <script>
           var editor_instance = CKEDITOR.replace("editor-{{ author }}", {
