Cancel Button Minor Bug Fixed

--- a/ception/articles/templates/articles/edit.html
+++ b/ception/articles/templates/articles/edit.html
@@ -78,8 +78,8 @@
     <div class="col-md-6" id="sidebar">
       <div class="row" style="margin-top: 10px;">
         <div class="col-md-3">
-          <button class="btn btn-default btn-block" id="cancel-button"
-                  href="{% url 'articles' %}">{% trans 'Cancel' %}</button>
+          <a class="btn btn-default btn-block" id="cancel-button"
+             href="{% url 'articles' %}">{% trans 'Cancel' %}</a>
         </div>
         <div class="col-md-3">
           <button class="btn btn-primary btn-block" id="commit-button">{% trans 'Commit' %}</button>
