--- a/ception/articles/templates/articles/edit.html
+++ b/ception/articles/templates/articles/edit.html
@@ -102,10 +102,10 @@
 
     <script>
       (function () {
-        var version_id = {{ form.instance.pk }};
+        var current_version = {{ data.current_version_json | safe }};
         var current_user = "{{ user }}";
         var json_str_array = {{ data.json|safe }};
-        init_page(version_id, current_user, json_str_array);
+        init_page(current_version, current_user, json_str_array);
       })();
     </script>
   </div>
