--- a/ception/templates/base.html
+++ b/ception/templates/base.html
@@ -1,4 +1,5 @@
-{% load staticfiles i18n %}<!DOCTYPE html>
+<!DOCTYPE html>
+{% load staticfiles i18n %}
 <html lang="en">
   <head>
     <meta charset="utf-8">
