Add a Diff Test View. Minor bug fixed

--- a/ception/static/ckeditor/contents.css
+++ b/ception/static/ckeditor/contents.css
@@ -140,7 +140,7 @@ a > img {
 	margin-top: 5px;
 	margin-bottom: 10px;
 	font-size: 14px;
-	line-height: 1.3;
+	line-height: 1.42857143;
 }
 
 .cke_concise_body .cke_editable {
