Fix merge and del hide bugs & backup database

--- a/ception/articles/templates/articles/partial_sentence.html
+++ b/ception/articles/templates/articles/partial_sentence.html
@@ -37,7 +37,7 @@
 
         </script>
       {% else %}
-        <div class="sentence-content" id="current_sentence"></div>
+        <div class="sentence-content hide-del-class" id="current_sentence"></div>
       {% endifnotequal %}
     </div>
   </div>
