Abandon notification and message functionalities for debug purposes

--- a/ception/articles/templates/articles/merge-modal.html
+++ b/ception/articles/templates/articles/merge-modal.html
@@ -16,7 +16,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary" id="modal-confirm-button">Save changes</button>
+        <button type="button" class="btn btn-primary" id="modal-confirm-button">Merge</button>
       </div>
     </div>
   </div>
