--- a/ception/articles/static/css/edit.css
+++ b/ception/articles/static/css/edit.css
@@ -17,11 +17,11 @@
     /*font-size: 20px;*/
     vertical-align: middle;
     /*line-height: 30px;*/
-    border-bottom: 1px solid #e3e3e3;
+    border-top: 1px solid #e3e3e3;
 }
 
-#sentence-list .sentence-block:last-child {
-    border-bottom: none;
+#sentence-list .sentence-block:first-child {
+    border-top: none;
 }
 
 .sentence-content del {
