Minor bug fixed, add a delete toggle in modal, prepare for summary view, try to save everything in database, instead of computing it again and again and again.

--- a/ception/articles/static/css/edit.css
+++ b/ception/articles/static/css/edit.css
@@ -193,3 +193,17 @@
     left: -1px;
     overflow: hidden;
 }
+
+.modal-sentence del {
+    color: #3399ff;
+    text-line-through-color: #6699ff;
+}
+
+.modal-sentence ins {
+    color: #ff3366;
+    text-decoration: none;
+}
+
+.modal-footer .toggle {
+    float: left;
+}
