Fix Diff Test View Bug, file structure changed, towards summary view

--- a/ception/articles/templates/articles/tests/diff_view.html
+++ b/ception/articles/templates/articles/tests/diff_view.html
@@ -86,7 +86,9 @@
           data: {
             'csrfmiddlewaretoken': csrf,
             'sen_A': editorA.getData(),
-            'sen_B': editorB.getData()
+            'sen_B': editorB.getData(),
+            'sen_id': -1,
+            'ver_id': -1
           },
           cache: false,
           type: 'post',
